update Plugin Wiki